Set calendar popup location to bottom (instead of auto), so when vertical height does not fit it on either top or bottom the bottom will allow for scrolling to fit it into view.  Changed calendar font size to px to make calendar resize correctly.

--- a/src/components/DateSelector/DateSelector.css
+++ b/src/components/DateSelector/DateSelector.css
@@ -1,6 +1,6 @@
 .responsive-calendar {
     /* by setting font-size, all calendar elements will correspond */
-    font-size: .65em !important; /* default to 10px */
+    font-size: 8px !important; /* px needs to be used for calendar to properly format */
 }
 
 .responsive-calendar-input {
